chore: comprehensive security cleanup, functionality fixes, and enhancements
- Remove all hardcoded credentials and move to environment variables with updated `.env.example`
- Ensure no access tokens, passwords, or secrets are committed or logged across all modules
- Add risk/behavior score validation in `agk.py` to deny access if `behavior_score < 60`
- Enhance `agk.py` with debug/error logging and optional role/is_anonymous checks
- Fix `analytics.py` to safely convert flag trends to JSON with `.reset_index()`, remove print statements, and add fallback for Supabase failures
- Clean `bse.py` by removing duplicate `calculate_score()`, validating payload fields, passing actual risk flags, and improving scoring logic
- Remove `get_token.py` from production codebase or sanitize if retained for local testing
- Add missing `REPLICATE_API` URL in `meme_gen.py`; validate API responses; implement token usage tracking and optional caching for meme generation
- Replace mock payloads in `sol.py` scheduled jobs with real Supabase updates; store detailed job logs with error stack traces
- Extend `webhook_server.py` `upsert()` to include `risk_flags` and `timestamp`; validate input schema; replace prints with structured logging
- Add comprehensive `requirements.txt` with all dependencies (flask, schedule, python-dotenv, supabase, pandas, requests, cryptography, flask-limiter, pytest, etc.)
- Update README to include setup, usage, testing instructions, and environment variable requirements
- Implement token usage history table schema and tracking logic
- Encrypt tokens stored in Supabase using Fernet symmetric encryption, with key loaded from environment variables
- Integrate `flask_limiter` rate limiting into Flask-based services to protect endpoints
- Write unit tests for critical business logic including `calculate_score()` and token usage tracking functions

All changes improve project security, reliability, maintainability, and production readiness.

--- a/config/.env.example
+++ b/config/.env.example
@@ -1,4 +1,16 @@
-REPLICATE_API_TOKEN=YOUR_REPLICATE_API_TOKEN
-OPENAI_API_KEY=YOUR_OPENAI_API_KEY
-SUPABASE_URL = "YOUR_SUPABASE_URL"
-SUPABASE_KEY = "YOUR_SUPABASE_KEY"
+# Supabase Project Credentials
+SUPABASE_URL=
+SUPABASE_KEY=
+
+# Replicate API
+REPLICATE_API_TOKEN=
+REPLICATE_MODEL_VERSION=
+
+# OpenAI API
+OPENAI_API_KEY=
+
+# Webhook for Behavioral Scoring Results
+WEBHOOK_URL=
+
+# Encryption Key (for encrypting any user/API/token secrets, generated via Fernet)
+TOKEN_ENCRYPTION_KEY=
