--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,15 @@ annotated-types==0.7.0
 anyio==4.9.0
 blinker==1.9.0
 certifi==2025.6.15
+cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
+cryptography==45.0.5
+Deprecated==1.2.18
 deprecation==2.1.0
 Flask==3.1.1
 flask-cors==6.0.1
+Flask-Limiter==3.12
 gotrue==2.12.3
 h11==0.16.0
 h2==4.2.0
@@ -15,21 +19,31 @@ httpcore==1.0.9
 httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+limits==5.4.0
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
 numpy==2.3.1
+ordered-set==4.1.0
 packaging==25.0
 pandas==2.3.1
+pluggy==1.6.0
 postgrest==1.1.1
+pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
+Pygments==2.19.2
 PyJWT==2.10.1
+pytest==8.4.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 realtime==2.5.3
 requests==2.32.4
+rich==13.9.4
 schedule==1.2.2
 six==1.17.0
 sniffio==1.3.1
@@ -37,9 +51,10 @@ storage3==0.12.0
 StrEnum==0.4.15
 supabase==2.16.0
 supafunc==0.10.1
+typing-extensions==4.14.1
 typing-inspection==0.4.1
-typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
 websockets==15.0.1
 Werkzeug==3.1.3
+wrapt==1.17.2
