--- a/config/.env.example
+++ b/config/.env.example
@@ -1,16 +1,20 @@
 # Supabase Project Credentials
-SUPABASE_URL=
-SUPABASE_KEY=
+SUPABASE_URL=your_supabase_url_here
+SUPABASE_KEY=your_supabase_anon_key_here
+
+# Test User Credentials (for development only)
+TEST_EMAIL=your_test_email_here
+TEST_PASSWORD=your_test_password_here
 
 # Replicate API
-REPLICATE_API_TOKEN=
-REPLICATE_MODEL_VERSION=
+REPLICATE_API_TOKEN=your_replicate_token_here
+REPLICATE_MODEL_VERSION=your_model_version_here
 
 # OpenAI API
-OPENAI_API_KEY=
+OPENAI_API_KEY=your_openai_key_here
 
 # Webhook for Behavioral Scoring Results
-WEBHOOK_URL=
+WEBHOOK_URL=your_webhook_url_here
 
-# Encryption Key (for encrypting any user/API/token secrets, generated via Fernet)
-TOKEN_ENCRYPTION_KEY=
+# Encryption Key (generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())")
+TOKEN_ENCRYPTION_KEY=your_fernet_key_here
