🔐 Webhook Authentication Implementation ✅ Signature-based authentication - HMAC-SHA256 verification (GitHub/GitLab style)
✅ Token-based authentication - Bearer token support as alternative

✅ Configurable auth methods - Choose via WEBHOOK_AUTH_METHOD environment variable

✅ Security best practices - Constant-time comparison to prevent timing attacks

✅ Authentication decorator - @require_webhook_auth for clean code organization

🚨 Proper HTTP Status Code Classification
✅ 400 Bad Request - Validation errors, constraint violations, invalid data

✅ 401 Unauthorized - Missing or invalid authentication credentials

✅ 429 Too Many Requests - Rate limiting exceeded

✅ 500 Internal Server Error - Generic internal server errors

✅ 502 Bad Gateway - Database connection/external service issues

✅ 503 Service Unavailable - Service maintenance/overloaded

✅ Intelligent error classification - classify_database_error() function

🛡️ Enhanced Security Features
✅ Request validation - Content-type checking, payload structure validation

✅ Duplicate detection - Prevents replay attacks within time windows

✅ Enhanced rate limiting - Per-IP limits with detailed error responses

✅ Input sanitization - Comprehensive field validation with detailed error messages

✅ Security logging - Detailed logs for authentication attempts and security events

📊 Production-Ready Monitoring & Observability
✅ Processing time tracking - Monitor webhook performance metrics

✅ Enhanced logging - Structured logging with request details and IP tracking

✅ Health check endpoint - /health with database connectivity testing

✅ Statistics endpoint - /webhook/stats for real-time metrics and error analysis

✅ Test authentication endpoint - /webhook/test-auth for verification

🔧 Robust Error Handling & Response System
✅ Structured error responses - Consistent JSON format with error codes

✅ Detailed validation messages - Specific field-level error reporting

✅ Graceful degradation - Continue operation during non-critic

--- a/config/.env.example
+++ b/config/.env.example
@@ -18,3 +18,8 @@ WEBHOOK_URL=your_webhook_url_here
 
 # Encryption Key (generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())")
 TOKEN_ENCRYPTION_KEY=your_fernet_key_here
+
+# ADD THESE NEW WEBHOOK SECURITY VARIABLES:
+WEBHOOK_AUTH_METHOD=signature
+WEBHOOK_SECRET=my-super-secret-webhook-key-12345
+WEBHOOK_TOKEN=my-secure-bearer-token-67890
