✅ Advanced Device Fingerprinting - SHA256 hashing with multiple data points ✅ 7 Anomaly Patterns - Comprehensive fraud detection coverage ✅ Smart Flag System - Green/Yellow/Red classification ✅ FingerprintJS Integration - Professional device identification ✅ BSE Integration - Seamless combination with your existing system ✅ Real-time Processing - Instant anomaly detection ✅ Comprehensive Analytics - Dashboard views and statistics

--- a/config/.env.example
+++ b/config/.env.example
@@ -23,3 +23,6 @@ TOKEN_ENCRYPTION_KEY=your_fernet_key_here
 WEBHOOK_AUTH_METHOD=signature
 WEBHOOK_SECRET=my-super-secret-webhook-key-12345
 WEBHOOK_TOKEN=my-secure-bearer-token-67890
+
+
+FINGERPRINTJS_API_KEY=your_fingerprintjs_api_key_here
