🗑️ Removed: All Replicate API code, MODEL_VERSION, per-user token handling
➕ Added: OpenAI DALL·E integration with cost tracking

💰 Added: Monthly budget limits ($20 cap)

📊 Enhanced: Cost tracking and budget monitoring

🔧 Modified: generate_meme() now uses OpenAI exclusively

--- a/config/.env.example
+++ b/config/.env.example
@@ -26,3 +26,10 @@ WEBHOOK_TOKEN=my-secure-bearer-token-67890
 
 
 FINGERPRINTJS_API_KEY=your_fingerprintjs_api_key_here
+
+# OpenAI DALL·E Configuration
+OPENAI_API_KEY=your_openai_api_key_here
+MONTHLY_BUDGET_LIMIT=20.0
+DALL_E_MODEL=dall-e-3
+DALL_E_QUALITY=standard
+DALL_E_SIZE=1024x1024
