--- a/requirements.txt
+++ b/requirements.txt
@@ -58,3 +58,23 @@ urllib3==2.5.0
 websockets==15.0.1
 Werkzeug==3.1.3
 wrapt==1.17.2
+
+# Testing requirements for enhanced meme_gen.py
+unittest2>=1.1.0
+mock>=4.0.3
+openai>=0.28.0
+python-dotenv>=1.0.0
+supabase>=1.0.0
+requests>=2.28.0
+
+# Testing requirements for meme_gen.py with pytest
+pytest>=7.4.0
+pytest-mock>=3.11.0
+pytest-cov>=4.1.0
+pytest-xdist>=3.3.0
+pytest-html>=3.2.0
+pytest-asyncio>=0.21.0
+openai>=0.28.0
+python-dotenv>=1.0.0
+supabase>=1.0.0
+requests>=2.28.0
