🤖 Bot Detection Integration Real-time bot detection before payload processing
User-Agent analysis for bot patterns

FingerprintJS integration ready

Automatic bot rejection with configurable thresholds

🚨 Fake Referral Prevention
Pre-processing fake referral detection

IP velocity checking (>3 referrals/hour from same IP)

User referral limits (>10 referrals/day per user)

Automatic rejection of fake referrals

🧠 BSE Integration
Direct BSE communication for enhanced scoring

Synchronous or asynchronous processing options

BSE health monitoring in health check endpoint

Enhanced payload forwarding with request metadata

📊 Enhanced Monitoring
Bot detection statistics in /webhook/stats

Fake referral metrics tracking

Enhanced health checks with feature status

Comprehensive logging for all detections

🛡️ Additional Security
Multi-layered protection: Auth → Bot Detection → Fake Referral → Processing

Rate limiting for bot detection endpoint

Detailed attack logging for analysis

Graceful degradation if detection services fail

--- a/config/.env.example
+++ b/config/.env.example
@@ -33,3 +33,22 @@ MONTHLY_BUDGET_LIMIT=20.0
 DALL_E_MODEL=dall-e-3
 DALL_E_QUALITY=standard
 DALL_E_SIZE=1024x1024
+
+# Bot Detection APIs
+FINGERPRINTJS_API_KEY=your_fingerprintjs_api_key_here
+IPHUB_API_KEY=your_iphub_api_key_here
+BOT_DETECTION_ENABLED=true
+FINGERPRINT_CONFIDENCE_THRESHOLD=0.8
+
+# BSE Integration
+BSE_ENABLED=true
+BSE_ENDPOINT=http://localhost:5000/process
+BSE_ASYNC_PROCESSING=false
+
+# Bot Detection for Webhook Server
+BOT_DETECTION_WEBHOOK_ENABLED=true
+BOT_DETECTION_RATE_LIMIT=20 per hour
+
+# These should already exist from BSE enhancement
+FINGERPRINTJS_API_KEY=your_fingerprintjs_api_key_here
+IPHUB_API_KEY=your_iphub_api_key_here
