✅ 1. Modular Configuration Dynamic scoring rules adjustable from admin panel
Configurable job intervals without code changes

Cached configuration with automatic invalidation

Version-controlled config changes with audit trail

✅ 2. Environment Variables
Comprehensive .env.example with all API keys

Environment validation with detailed error reporting

Security checks for weak keys and invalid formats

Configuration summary for system health monitoring

✅ 3. Comprehensive Audit Logging
All risky actions logged with detailed context

Risk-level classification (HIGH/MEDIUM/LOW)

Pattern detection for suspicious activities

File backup logging when database fails

Audit trail queries for compliance and investigation

--- a/config/.env.example
+++ b/config/.env.example
@@ -1,54 +1,72 @@
-# Supabase Project Credentials
-SUPABASE_URL=your_supabase_url_here
+# Database Configuration
+SUPABASE_URL=your_supabase_project_url_here
 SUPABASE_KEY=your_supabase_anon_key_here
 
-# Test User Credentials (for development only)
-TEST_EMAIL=your_test_email_here
-TEST_PASSWORD=your_test_password_here
-
-# Replicate API
-REPLICATE_API_TOKEN=your_replicate_token_here
-REPLICATE_MODEL_VERSION=your_model_version_here
-
-# OpenAI API
-OPENAI_API_KEY=your_openai_key_here
-
-# Webhook for Behavioral Scoring Results
-WEBHOOK_URL=your_webhook_url_here
-
-# Encryption Key (generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())")
-TOKEN_ENCRYPTION_KEY=your_fernet_key_here
-
-# ADD THESE NEW WEBHOOK SECURITY VARIABLES:
-WEBHOOK_AUTH_METHOD=signature
-WEBHOOK_SECRET=my-super-secret-webhook-key-12345
-WEBHOOK_TOKEN=my-secure-bearer-token-67890
-
-
-FINGERPRINTJS_API_KEY=your_fingerprintjs_api_key_here
-
-# OpenAI DALL·E Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# OpenAI Configuration
+OPENAI_API_KEY=sk-your_openai_api_key_here
 MONTHLY_BUDGET_LIMIT=20.0
 DALL_E_MODEL=dall-e-3
 DALL_E_QUALITY=standard
 DALL_E_SIZE=1024x1024
 
 # Bot Detection APIs
-FINGERPRINTJS_API_KEY=your_fingerprintjs_api_key_here
-IPHUB_API_KEY=your_iphub_api_key_here
+FINGERPRINTJS_API_KEY=your_fingerprintjs_api_key
+FINGERPRINTJS_SECRET_KEY=your_fingerprintjs_secret_key
+IPHUB_API_KEY=your_iphub_api_key
 BOT_DETECTION_ENABLED=true
 FINGERPRINT_CONFIDENCE_THRESHOLD=0.8
 
-# BSE Integration
-BSE_ENABLED=true
-BSE_ENDPOINT=http://localhost:5000/process
-BSE_ASYNC_PROCESSING=false
+# Webhook Configuration
+WEBHOOK_URL=https://your-app.com/api/webhook/behavior-score
+WEBHOOK_MAX_RETRIES=3
+WEBHOOK_RETRY_DELAY=2
+WEBHOOK_TIMEOUT=30
 
-# Bot Detection for Webhook Server
-BOT_DETECTION_WEBHOOK_ENABLED=true
-BOT_DETECTION_RATE_LIMIT=20 per hour
+# Security Keys
+JWT_SECRET_KEY=your_jwt_secret_key_for_sessions
+ENCRYPTION_KEY=your_32_character_encryption_key_here
+API_SECRET_KEY=your_api_secret_for_internal_auth
 
-# These should already exist from BSE enhancement
-FINGERPRINTJS_API_KEY=your_fingerprintjs_api_key_here
-IPHUB_API_KEY=your_iphub_api_key_here
+# Email/Notification Services
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=your_email@gmail.com
+SMTP_PASSWORD=your_app_password
+ADMIN_EMAIL=admin@yourcompany.com
+
+# Slack Integration (for alerts)
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/your/slack/webhook
+SLACK_CHANNEL=#security-alerts
+
+# Discord Integration (for alerts)
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/your/discord/webhook
+
+# Cache Configuration
+REDIS_URL=redis://localhost:6379/0
+CACHE_TTL_SECONDS=300
+
+# Rate Limiting
+RATE_LIMIT_ENABLED=true
+MAX_REQUESTS_PER_HOUR=1000
+MAX_CONCURRENT_REQUESTS=10
+
+# Logging Configuration
+LOG_LEVEL=INFO
+LOG_FILE_PATH=./logs/bse_system.log
+AUDIT_LOG_RETENTION_DAYS=365
+
+# Development/Testing
+TESTING_MODE=false
+DEBUG_MODE=false
+MIGRATE_ENABLED=false
+
+# Dashboard Configuration
+DASHBOARD_PORT=5002
+DASHBOARD_REFRESH_INTERVAL=30
+DASHBOARD_MAX_LEADERBOARD_USERS=50
+
+# Feature Flags
+MEME_GENERATION_ENABLED=true
+REAL_TIME_ANALYTICS_ENABLED=true
+ADVANCED_BOT_DETECTION_ENABLED=true
+FAKE_REFERRAL_DETECTION_ENABLED=true
