--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# ==================== EXISTING DEPENDENCIES ====================
 annotated-types==0.7.0
 anyio==4.9.0
 blinker==1.9.0
@@ -59,22 +60,59 @@ websockets==15.0.1
 Werkzeug==3.1.3
 wrapt==1.17.2
 
-# Testing requirements for enhanced meme_gen.py
+# ==================== NEW RECOMMENDED ADDITIONS ====================
+
+# Real-Time Dashboard & WebSocket Support
+flask-socketio>=5.3.0          # Real-time dashboard updates
+eventlet>=0.33.0                # Async support for Flask-SocketIO
+
+# Enhanced Analytics & Data Processing
+scipy>=1.11.0                   # Advanced analytics calculations
+matplotlib>=3.8.0               # Chart generation backup (if Chart.js fails)
+seaborn>=0.12.0                 # Statistical data visualization
+
+# Caching & Performance (Optional but Recommended)
+redis>=5.0.0                    # Redis caching support
+flask-caching>=2.1.0            # Flask caching integration
+
+# Security & Validation Enhancements
+bcrypt>=4.0.0                   # Password hashing for admin features
+authlib>=1.3.0                  # OAuth2 support for admin panel
+email-validator>=2.1.0          # Email validation utilities
+
+# Background Jobs & Task Queue (Optional)
+celery>=5.3.0                   # Background job processing
+kombu>=5.3.0                    # Message queue for Celery
+
+# API Documentation (Optional)
+flask-restx>=1.3.0              # Auto API documentation
+marshmallow>=3.20.0             # Data serialization/validation
+
+# Monitoring & Logging (Optional)
+structlog>=23.2.0               # Structured logging
+sentry-sdk>=1.40.0              # Error monitoring
+
+# Testing Enhancements (Already mostly covered, but these are nice)
+responses>=0.24.0               # Mock HTTP requests in tests
+freezegun>=1.2.0                # Mock datetime for time-dependent tests
+factory-boy>=3.3.0              # Test data generation
+faker>=20.1.0                   # Generate fake test data
+
+# Development Tools (Optional)
+black>=23.12.0                  # Code formatting
+flake8>=6.1.0                   # Code linting
+mypy>=1.8.0                     # Type checking
+pre-commit>=3.6.0               # Git hooks for code quality
+
+# ==================== EXISTING TEST DEPENDENCIES ====================
 unittest2>=1.1.0
 mock>=4.0.3
 openai>=0.28.0
-python-dotenv>=1.0.0
-supabase>=1.0.0
 requests>=2.28.0
-
-# Testing requirements for meme_gen.py with pytest
 pytest>=7.4.0
 pytest-mock>=3.11.0
 pytest-cov>=4.1.0
 pytest-xdist>=3.3.0
 pytest-html>=3.2.0
 pytest-asyncio>=0.21.0
-openai>=0.28.0
-python-dotenv>=1.0.0
-supabase>=1.0.0
-requests>=2.28.0
+pytest-requests-mock>=1.12.0   # NEW: Better HTTP mocking for tests
