--- a/requirements.txt
+++ b/requirements.txt
@@ -116,3 +116,16 @@ pytest-xdist>=3.3.0
 pytest-html>=3.2.0
 pytest-asyncio>=0.21.0
 pytest-requests-mock>=1.12.0   # NEW: Better HTTP mocking for tests
+
+# AI & Machine Learning APIs
+openai==0.28.1                 # Already in test section but should be in main
+replicate==0.15.4               # For meme generation fallback
+transformers==4.35.2            # HuggingFace models (Phase 2-5)
+scikit-learn==1.3.2             # ML scoring algorithms
+torch>=2.0.0                    # PyTorch for transformers
+
+# Advanced Scheduling
+APScheduler==3.10.4             # Alternative to schedule for complex jobs
+
+# Database Enhancements  
+psycopg2-binary==2.9.7         # PostgreSQL adapter for direct DB access
